<resources>
    <string name="app_name">Desafio04-DH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="adicionar">Adicionar</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">SAVE GAME</string>
    <string name="repeat_password">Repeat password</string>
</resources>