<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".autenticacao.view.LoginFragment">


    <ImageView
        android:id="@+id/imgFundo_fLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail_fLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword_fLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"/>

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ckbRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remember"
                android:buttonTint="@color/colorRed"
                 />

            <Button
                android:id="@+id/btnLogin_fLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorRed"/>

            <Button
                android:id="@+id/btnSign_fLogin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>