<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".autenticacao.view.CreateAccountFragment">

    <ImageView
        android:id="@+id/imgFundo_fCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName_fCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail_fCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword_fCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRepeatPassword_fCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave_fCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:backgroundTint="@color/colorRed" />

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>