<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".listagame.view.GameFragment">

    <ImageView
        android:id="@+id/imgFundo_fGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintTextColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName_fGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_at"
                app:hintTextColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCreateAt_fGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:hintTextColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription_fGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave_fGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_game"
                android:backgroundTint="@color/colorRed"/>
            <Button
                android:id="@+id/btnImagem_fGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Carregar imagem"
                android:backgroundTint="@color/colorRed"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>